--- a/client/src/pages/login_page/login_style.css
+++ b/client/src/pages/login_page/login_style.css
@@ -2,7 +2,7 @@
 .container_login {
     width: 100%;
     height: 800px;
-    background-image: url("./../assets/img/background_login.png");
+    background-image: url("../../assets/img/background_login.png");
     background-blend-mode: color;
     display: flex;
     flex-direction: column;
