--- a/client/src/components/layout/Header/header.css
+++ b/client/src/components/layout/Header/header.css
@@ -1,5 +1,5 @@
 .header {
-  width: 100%;
+  width: 100;
   display: flex;
   top: 0;
   height: 48px;
@@ -64,4 +64,56 @@
 .select-icon-item {
   margin-left: 2px;
   margin-top: 6px;
+}
+
+/* Search */
+.search-info {
+  width: 100%;
+  display: flex;
+  flex-direction: row-reverse;
+}
+
+.header-search {
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  border-radius: 6px;
+  align-items: center;
+  display: flex;
+  margin-right: 12px;
+}
+
+.icon-search {
+  margin: 6px 4px 0 4px;
+}
+
+.input-search {
+  border: none;
+  outline: none;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  border-radius: 6px;
+}
+
+.header-info {
+  display: flex;
+  align-items: center;
+}
+
+.btn-header_info {
+  border: transparent;
+  padding: 0;
+  margin: 4px;
+  height: 28px;
+  width: 28px;
+  border-radius: 50%;
+  background-color: transparent;
+}
+
+.btn-header_info:hover {
+  background-color: rgba(0, 0, 0, 0.2);
+}
+
+.icon-info-item {
+  font-size: 28px;
+  color: #4f4f4f;
 }
