--- a/client/src/pages/pageOne/pageOne.css
+++ b/client/src/pages/pageOne/pageOne.css
@@ -1,6 +1,11 @@
 .main {
-  margin: 68px 0 0 0;
+  margin: 0;
   padding: 0;
+}
+
+.header-page {
+  position: fixed;
+  top: 0;
 }
 
 .skip-target {
@@ -11,7 +16,7 @@
 
 .ui-section {
   width: 80%;
-  margin: 32px auto;
+  margin: 0 auto;
   padding: 0 32px 16px 32px;
 }
 
@@ -176,14 +181,29 @@
 
 .logo {
   flex: 1;
+  object-fit: cover;
 }
 
 .text-content {
   flex: 1;
+  margin: 36px 0;
+  height: 150px;
+  max-width: 200px;
+  cursor: pointer;
+  padding: 24px;
+  border-radius: 10px;
+}
+
+.text-content:hover {
+  background-color: rgba(0, 0, 0, 0.1);
+}
+
+.text-title {
+  font-size: 18px;
 }
 
 .text-content p {
-  font-size: 1;
+  font-size: 14px;
 }
 
 .skip-target-end {
