--- a/client/src/components/boardcanvas/WindownCard/WindownCard.css
+++ b/client/src/components/boardcanvas/WindownCard/WindownCard.css
@@ -93,6 +93,7 @@
   font-weight: 700;
   padding: 0;
   margin: 0 0 8px 0;
+  text-align: left;
 }
 
 .btn-watch {
@@ -139,11 +140,22 @@
 
 .icon-detail {
   margin-left: 14px;
-  font-size: 24px;
+  font-size: 22px;
+  color: black;
 }
 
 .card-item-header {
   display: flex;
+}
+
+.card-item-content {
+  flex: 1;
+}
+
+.card-show {
+  justify-content: space-between;
+  display: flex;
+  width: 100%;
 }
 
 .title-header {
@@ -158,6 +170,53 @@
 .btn-header:hover {
   background-color: rgba(0, 0, 0, 0.2);
 }
+
+.header-button {
+  margin-right: 16px;
+}
+
+.checklist-detail {
+  margin-top: 20px;
+  padding: 0 12px;
+}
+
+.checklist-progress-bar {
+  width: 100%;
+  height: 6px;
+  border-radius: 10px;
+  background-color: #f2f2f2;
+  position: relative;
+}
+
+.progress-bar_percent {
+  position: absolute;
+  top: -10px;
+  left: -24px;
+}
+
+.progress {
+  width: 100%;
+  border-radius: 10px;
+  background-color: #f2f2f2;
+}
+
+.checklist-item-list {
+  position: relative;
+  margin: 12px 0px;
+}
+
+.checklist-item-list_title {
+  text-align: left;
+  margin: 0;
+  padding: 0;
+}
+
+#progress-bar_input {
+  position: absolute;
+  left: -24px;
+  top: 8px;
+}
+
 /* Sidebar */
 .windown-card-sidebar {
   flex: 1;
@@ -206,8 +265,6 @@
   color: #5f6d84;
   font-weight: 400;
 }
-
-
 
 .calendar {
   border: 1px solid;
