Add Edit Card + Card dialog + have bug

--- a/client/src/components/boardcanvas/WindownCard/WindownCard.css
+++ b/client/src/components/boardcanvas/WindownCard/WindownCard.css
@@ -2,7 +2,7 @@
   z-index: 200;
   width: 50%;
   height: 500px;
-  background-color: white;
+  background-color: whitesmoke;
   border-radius: 12px;
   margin: 48px auto 0 auto;
   position: relative;
