--- a/client/src/components/boardcanvas/BoardList/BoardList.css
+++ b/client/src/components/boardcanvas/BoardList/BoardList.css
@@ -1,9 +1,10 @@
 .js-list-content {
   width: 272px;
+  height: fit-content;
   min-height: 100px;
   background-color: #f1f2f4;
   box-sizing: border-box;
-  margin: 0 6px;
+  margin: 1rem 0.5rem;
   border-radius: 10px;
   scroll-margin: 8px;
 }
@@ -121,6 +122,11 @@
   align-items: center;
 }
 
+.btn-edit:hover {
+  background-color: #56c9e9;
+  border-radius: 3px;
+}
+
 .btn-add {
   background-color: #0c66e4;
   color: white;
@@ -140,22 +146,4 @@
   flex: 4;
   display: flex;
   align-items: center;
-}
-
-/* Windown overplay */
-.windown-overplay {
-  position: fixed;
-  top: 0;
-  bottom: 0;
-  right: 0;
-  left: 0;
-  display: flex;
-}
-
-.overplay {
-  z-index: 1;
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.3);
 }
