--- a/client/src/components/boardcanvas/Cards/Cards.css
+++ b/client/src/components/boardcanvas/Cards/Cards.css
@@ -8,6 +8,15 @@
   cursor: pointer;
   position: relative;
 }
+
+/* Windown overplay */
+.window-overlay {
+  z-index: 999;
+  position: fixed;
+  background-color: transparent;
+}
+
+
 .btn-edit {
   display: none;
   position: absolute;
@@ -33,7 +42,6 @@
   font-size: 14px;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Noto Sans,
     Ubuntu, Droid Sans, Helvetica Neue, sans-serif;
-  margin-bottom: -12px;
   padding-left: 6px;
 }
 
@@ -66,4 +74,14 @@
 
 .badge-time .badge-icon {
   color: white;
+}
+
+.list-card-title{
+  word-wrap: break-word;
+  clear: both;
+  color: var(--ds-text,#172b4d);
+  display: block;
+  margin: 0 0 4px;
+  overflow: hidden;
+  text-decoration: none;
 }
