--- a/client/src/components/boardcanvas/BoardContent/BoardContent.css
+++ b/client/src/components/boardcanvas/BoardContent/BoardContent.css
@@ -1,8 +1,9 @@
 .board-content {
-  display: flex;
+  display: inline-flex;
   margin: 0;
   padding: 0;
-  width: 100%;
+  width: auto;
+  min-width: 100vw;
   height: 100vh;
   background-color: #cbbbbb;
 }
