--- a/client/src/components/boardcanvas/WindownCard/WindownCard.css
+++ b/client/src/components/boardcanvas/WindownCard/WindownCard.css
@@ -1,7 +1,7 @@
 .windown-card {
   z-index: 200;
   width: 50%;
-  height: 500px;
+  height: auto;
   background-color: whitesmoke;
   border-radius: 12px;
   margin: 48px auto 0 auto;
@@ -67,11 +67,16 @@
 /* Body */
 .windown-body {
   display: flex;
-  height: 500px;
+  height: auto;
+  max-height: 550px;
+  overflow: auto;
+  min-height: 500px;
+
 }
 
 /* Content */
 .windown-card-content {
+  margin-bottom: 1rem;
   flex: 3;
 }
 
@@ -169,6 +174,7 @@
     Ubuntu, Droid Sans, Helvetica Neue, sans-serif;
   color: #5f6d84;
   font-weight: 500;
+  margin-right: 16px;
 }
 
 .add-to-card-items {
@@ -210,11 +216,61 @@
 
 
 .calendar {
+  padding: 0.5rem;
   border: 1px solid;
   z-index: 9999;
   position: absolute;
-  top: -1px;
-  left: -15px;
+  top: -2px;
+  left: -10rem;
   border-radius: 1rem;
   background-color: #fff;
+}
+
+.update {
+  margin-top: 1rem;
+  width: 100%;
+  padding: 0 2rem;
+}
+
+
+.comment {
+  display: flex;
+  align-items: center;
+  margin-bottom: 1rem;
+  margin-top: 1rem;
+  padding: 0 2rem;
+}
+
+.avatar {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  margin-right: 1rem;
+}
+
+.comment-details {
+  display: flex;
+  flex-direction: column;
+  margin-right: 1rem;
+}
+
+.username {
+  font-weight: bold;
+  margin-bottom: 0.5rem;
+}
+
+.timestamp {
+  color: #999;
+  font-size: 0.8rem;
+  margin-bottom: 0.5rem;
+}
+
+.comment-text {
+  margin: 0;
+}
+
+.button-container {
+  padding: 0.5rem;
+  display: flex;
+  justify-content: space-between;
 }
