--- a/client/src/pages/register_page/register_style.css
+++ b/client/src/pages/register_page/register_style.css
@@ -1,8 +1,7 @@
-
 .container_register {
     width: 100%;
-    height: 800px;
-    background-image: url("./../assets/img/background_login.png");
+    height: 950px;
+    background-image: url("../../assets/img/background_login.png");
     background-blend-mode: color;
     display: flex;
     flex-direction: column;
