--- a/client/src/pages/login_page/login_style.css
+++ b/client/src/pages/login_page/login_style.css
@@ -19,7 +19,7 @@
 }
 .login {
     display: block;
-    padding: 40px 40px;
+    padding: 40px 40px 30px 40px;
     background-color: white;
     border-radius: 30px;
 }
@@ -34,7 +34,7 @@
 
 .input {
     display: block;
-    width: 270px;
+    width: 300px;
     padding: 15px;
     border: 0;
     border-radius: 5px;
@@ -52,7 +52,7 @@
 }
 
 .submit {
-    width: 272px;
+    width: 300px;
     padding: 15px;
     border: 0;
     border-radius: 5px;
@@ -64,12 +64,13 @@
     color: white;
     cursor: pointer;
     box-shadow: 0 5px 10px 0 rgba(128, 16, 22, 0.5);
-    margin-bottom: 15px;
+    margin: 15px 0;
 }
 
-p {
+div > p {
     text-align: end; 
     margin-right: 10px;
+    margin-bottom: 0px;
 }
 
 .account {
