--- a/client/src/components/Boards/BoardsMain/Main.css
+++ b/client/src/components/Boards/BoardsMain/Main.css
@@ -151,3 +151,28 @@ ul, li {
     width: calc(50% - 4px);
     max-width: 15rem;
 }
+
+.add-board {
+  width: 5rem;
+  height: 5rem;
+  background-color: #e0e0e0;
+  border-radius: 2px;
+  border: none;
+}
+
+
+.add-board:hover {
+  width: 5rem;
+  height: 5rem;
+  background-color: #757575;
+  border-radius: 4px;
+  border: none;
+}
+
+.popover-containner {
+  padding: 1rem;
+}
+
+.modal {
+  padding: 1rem;
+}
