--- a/client/src/components/boardcanvas/Pop-over/PopOver.css
+++ b/client/src/components/boardcanvas/Pop-over/PopOver.css
@@ -1,20 +1,27 @@
 .pop-over {
+  z-index: 5;
   position: absolute;
   width: 300px;
   background-color: white;
   border-radius: 6px;
   box-shadow: 0 8px 16px -4px rgba(9, 30, 66, 0.5);
+  left: 90%;
+  top: 20px;
+}
+
+.pop-over-header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  border-bottom: 1px solid #091e4221;
+  box-sizing: border-box;
 }
 
 .pop-over-header-title {
-  border-bottom: 1px solid #091e4221;
-  box-sizing: border-box;
+  flex: 5;
   color: #5e6c84;
-  display: block;
   line-height: 40px;
-  margin: 0 12px;
   overflow: hidden;
-  padding: 0 32px;
   position: relative;
   text-overflow: ellipsis;
   white-space: nowrap;
@@ -82,10 +89,7 @@
 }
 
 .pop-over-back {
-  position: absolute;
-  top: 6px;
-  right: 5px;
-
+  padding-right: 1rem;
   height: 28px;
   width: 28px;
 }
