--- a/client/src/components/layout/Header/header.css
+++ b/client/src/components/layout/Header/header.css
@@ -23,7 +23,7 @@
 
 .logo {
   width: 100px;
-  margin: 0 12px 0 4px;
+  margin: 0 12px 0 0;
   flex: 0;
 }
 
@@ -300,4 +300,41 @@
   font-size: 16px;
   font-weight: 700;
   color: black;
+}
+
+.bg-blue {
+  background-color: rgb(0, 102, 255);
+  color: white;
+  
+}
+
+.bg-none {
+  background-color: transparent;
+  color: black;
+}
+
+.button {
+  display: flex;
+  align-items: center;
+  padding: 8px;
+  text-decoration: none;
+  margin: 0 0 0 0;
+  height: 48px;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 1.5;
+  font-family: "Roboto", sans-serif;
+}
+
+.bg-blue :hover {
+color: white !important;
+}
+
+.bg-none :hover {
+  color: black !important;
+}
+
+.button+.button {
+  margin-left: 20px;
+  margin-right: 20px;
 }
