--- a/client/src/components/Boards/BoardsMain/Main.css
+++ b/client/src/components/Boards/BoardsMain/Main.css
@@ -171,6 +171,10 @@ ul, li {
 
 .popover-containner {
   padding: 1rem;
+  display: flex;
+  gap: 20px;
+  flex-flow: column;
+  width: 400px;
 }
 
 .modal {
