--- a/client/src/components/boardcanvas/BoardHeader/BoardHeader.css
+++ b/client/src/components/boardcanvas/BoardHeader/BoardHeader.css
@@ -77,7 +77,6 @@
   justify-content: center;
   border-radius: 3px;
   cursor: pointer;
-  padding: 6px 12px;
   text-decoration: none;
 }
 
@@ -91,8 +90,8 @@
   display: flex;
   position: relative;
   border-radius: 4px;
-  padding: 0 6px;
-  height: 36px;
+  align-items: center;
+  padding: 0 8px 0 8px ;
 }
 
 .bhc-filter::after {
@@ -104,14 +103,9 @@
   right: -6px;
 }
 
-.bhc-filter .bhc-title {
-  padding: 0 12px 0 0;
-}
 
 .bhc-icon-filter {
-  margin-top: 10px;
   font-size: 18px;
-  margin-right: 8px;
 }
 
 .bhc-avatar {
@@ -122,6 +116,8 @@
 }
 
 .bhc-share {
+  display: flex;
+  align-items: center;
   margin: 0;
   padding: 0;
   border-color: transparent;
@@ -129,14 +125,14 @@
   display: flex;
   background-color: #7b7470;
   border-radius: 5px;
-  padding-left: 6px;
+  padding: 0 6px 0 6px;
   color: white;
   justify-content: center;
 }
 
 .bhc-icon-share {
   font-size: 18px;
-  margin-top: 8px;
+  padding-right: 8px;
 }
 
 .bhc-menu {
