--- a/client/src/pages/login_page/login_style.css
+++ b/client/src/pages/login_page/login_style.css
@@ -1,7 +1,7 @@
 
 .container_login {
-    width: 100%;
-    height: 800px;
+    width: 100vw;
+    height: 100vh;
     background-image: url("../../assets/img/background_login.png");
     background-blend-mode: color;
     display: flex;
@@ -9,6 +9,7 @@
     align-items: center;
     justify-content: center;
     padding: 65px 0;
+    background-size: cover;
 }
 
 #trello {
