--- a/client/src/pages/register_page/register_style.css
+++ b/client/src/pages/register_page/register_style.css
@@ -1,6 +1,6 @@
 .container_register {
-    width: 100%;
-    max-height: 800px;
+    width: 100vw;
+    height: 100vh;
     background-image: url("../../assets/img/background_login.png");
     background-blend-mode: color;
     display: flex;
@@ -8,6 +8,7 @@
     align-items: center;
     justify-content: center;
     padding: 65px 0;
+    background-size: cover;
 }
 
 #trello {
