--- a/client/src/components/boardcanvas/AddList/AddList.css
+++ b/client/src/components/boardcanvas/AddList/AddList.css
@@ -11,9 +11,16 @@
 }
 
 .list-name-input {
+    line-height: 3rem;
     width: 100%;
     font-weight: 600;
     height: 32px;
+    border: 1px solid;
+    border-radius: 3px;
+}
+
+.list-name-input:focus {
+    border-color: white;
 }
 
 .list-add-controls {
@@ -24,8 +31,20 @@
 }
 
 .js-save-edit {
-    background-color: #fff;
     border-radius: 3px;
+    background-color: #0c66e4;
+    color: #f5f5f5;
+    border: 0;
+    height: 32px;
+    width: 86px;
+    font-size: 14px;
+    text-align: center;
+}
+
+.btn-add:hover, .js-save-edit:hover {
+    background-color: #14a44d;
+    transition: background-color 0.5s ease-in;
+    cursor: pointer;
 }
 
 .js-cancel-edit {
